syntax = "proto3";

package grpdcbpb;

import "expression.proto";

// https://www.sqlite.org/syntaxdiagrams.html#select-stmt

message Select {
    DistinctAll distinct_all = 1;
    repeated string result_column = 2;
    string from = 3;
    repeated Join join = 4;
    Expr where = 5;
    GroupByHaving group_by_having = 6;
    repeated OrderingTerm order_by = 7;  
    uint64 limit = 8;
    uint64 offset = 9;
}

enum DistinctAll {
    DISTINCT = 0;
    ALL = 1;
}

message Join {
    bool natural = 1;
    JoinType join_type = 2;
    string table = 3;
    Expr on = 4;
}

enum JoinType {
    INNER = 0; // inner is the default join type
    LEFT = 1;
    LEFT_OUTER = 2;
    RIGHT = 3;
    RIGHT_OUTER = 4;
    CROSS = 5;
}

message GroupByHaving {
    Having having = 6;
}

message Having {
}

message OrderingTerm {
    Expr by = 1;
    bool collate = 2;
    OrderingDirection dir = 3;
}

enum OrderingDirection {
    ASC = 0;
    DESC = 1;
}
